# dummy_robot

dummy_robot_control/: CMakeLists.txt  package.xml
dummy_robot_control/config/: dummy_robot_controller.yaml
dummy_robot_control/launch/: dummy_robot.launch
dummy_robot_control/src/: dummy_hardware.cpp  dummy_hardware.h  dummy_robot.cpp
dummy_robot_description/: CMakeLists.txt  package.xml
dummy_robot_description/urdf/: dummy_robot.gazebo  dummy_robot.xacro
